--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,11 @@
     @apply font-primary bg-darkblue text-white leading-normal;
   }
   .h3 {
-    @apply text-[22px] lg:text-[32px] font-bold;
+    @apply text-[22px] lg:text-[32px] font-bold text-black/50;
+  }
+
+  .h2 {
+    @apply text-[26px] lg:text-[38px] font-bold text-black/50;
   }
 
   .btn {
