--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
   }
 
   .btn {
-    @apply bg-transparent h-[60px] px-4 border-2 border-yellow-600/50   hover:bg-yellow-600 transition flex items-center text-lg font-medium outline-none;
+    @apply bg-transparent h-[60px] px-4 border-2 border-yellow-600/80  hover:bg-yellow-600/80 hover:border-transparent transition flex items-center text-lg font-medium outline-none;
   }
   .section {
     @apply py-12 lg:py-24;
