--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 @layer base {
   body {
     @apply font-primary bg-darkblue text-white leading-normal;
+    font-family: "Poppins", sans-serif;
   }
   .h3 {
     @apply text-[22px] lg:text-[32px] font-bold text-black/50;
