--- a/src/index.css
+++ b/src/index.css
@@ -193,8 +193,8 @@
 
 .exercise-card {
   color: #fff;
-  width: 350px;
-  height: 445px;
+  width: 300px;
+  height: 420px;
   background-color: #131338;
   border-radius: 20px;
   text-decoration: none;
@@ -207,7 +207,7 @@
 }
 
 .exercise-card img {
-  border-radius: 20px;
+  border-radius: 20px 20px 0px 0px;
   height: 300px;
 }
 
